lang/tests/derive/sol/ui/fail/05-invalid-field-type.rs
use liquid::State;
use liquid_lang as liquid;

#[derive(State)]
pub struct MyStruct {
    b: bool,
    i: f32,
}

fn main() {}
