lang/tests/derive/sol/ui/fail/05-invalid-field-type.stderr
error[E0277]: the trait bound `f32: You_Should_Use_An_Valid_Field_Type` is not satisfied
 --> $DIR/05-invalid-field-type.rs:7:8
  |
7 |     i: f32,
  |        ^^^ the trait `You_Should_Use_An_Valid_Field_Type` is not implemented for `f32`
